# n8n-conversation

./: .releaserc  README.md  hacs.json  pyproject.toml
custom_components/n8n_conversation/: __init__.py  ai_task.py  config_flow.py  const.py  conversation.py  entity.py  manifest.json  models.py
custom_components/n8n_conversation/translations/: en.json
