[project]
name = "n8n-conversation"
authors = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
maintainers = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
license = { file = "LICENSE.md" }
keywords = [
    "homeassistant",
    "integration",
    "custom-component",
    "conversation",
    "voice-assistant",
    "n8n",
    "n8n-conversation",
    "home-assistant",
    "home-assistant-custom-component",
    "home-assistant-integration",
    "home-assistant-integration",
]
classifiers = [
    "Intended Audience :: Users",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
description = "A custom component for Home Assistant to use n8n as a conversation agent."
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.0"

[project.urls]
Repository = "https://github.com/eulemitkeule/n8n-conversation"
Documentation = "https://github.com/eulemitkeule/n8n-conversation/blob/master/README.md"
Changelog = "https://github.com/EuleMitKeule/n8n-conversation/releases"
Issues = "https://github.com/eulemitkeule/n8n-conversation/issues"

[dependency-groups]
dev = [
    "homeassistant>=2025.4.4",
]
